[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/frontrider.tiledtools/editor/inspector/TiledmapInspectorView.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 128.0
margin_right = 157.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select"

[node name="Edit" type="Button" parent="HBoxContainer"]
margin_left = 322.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Edit"

[node name="Node" type="Node" parent="."]

[node name="FileDialog" type="FileDialog" parent="Node"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -102.5
margin_right = 204.0
margin_bottom = 102.5
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/Users/zim21/Documents/Laputa"
current_path = "/Users/zim21/Documents/Laputa/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Edit" to="." method="_on_Edit_pressed"]
[connection signal="file_selected" from="Node/FileDialog" to="." method="_on_FileDialog_file_selected"]
